Width bug on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,7 +24,7 @@ html{
   display:flex;
   flex: 1 0;
   flex-direction: row;
-  width:100% !important;
+  width:100vw !important;
   overflow-x: hidden;
   -ms-overflow-style: none; 
   scrollbar-width: none;
@@ -51,6 +51,7 @@ body{
   justify-content: center;
   align-items: center;
   height:100%;
+  width:100%;
   margin: 0;
   padding: 0;
 }
